@startuml
class ReflexionState {
  +input: str
  +chat_history: List
  +reflections: List
  +agent_outcome: Any
  +intermediate_steps: List
  +memories: Dict
}

class ReflexionAgent {
  -tools: List
  -tool_map: Dict
  -max_steps: int
  -max_reflections: int
  -llm: Any
  
  +__init__(llm_configs, tools, prompt_dir, tool_provider, memory, memory_config, max_steps, max_reflections, log_level)
  +build_graph(): None
  -_run_agent_llm(state): Dict
  -_execute_tools(state): Dict
  -_reflect_on_action(state): Dict
  -_generate_reflection(actions, outcome, feedback): str
  -_should_execute_tools(state): bool
  -_should_reflect(state): bool
  -_should_continue(state): bool
  +run(input_text): Dict
}

class BaseAgent {
}

ReflexionAgent --|> BaseAgent
ReflexionAgent -- ReflexionState

note right of ReflexionAgent
  Implements the Reflexion pattern
  which adds a reflection step
  after tool execution
end note
@enduml